--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "weather-now",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
