--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "moment": "^2.29.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
-    "sass": "^1.32.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.57.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
